1.19.2 working. contains client bugs